--- a/index.ipynb
+++ b/index.ipynb
@@ -171,12 +171,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If everything went fine , you should see an out like this:\n",
+    "If everything went fine , you should see an output in the following format:\n",
     "```\n",
     "[941, 60, 987, 542, 718]\n",
     "```\n",
     "\n",
-    "Do not worry if you dont fully comprehend what above meant. Next we will look into some basic programming principles and methods from Spark which will explain this. "
+    "Do not worry if you dont fully comprehend what the above meant. Next we will look into some basic programming principles and methods from Spark which will explain this. "
    ]
   },
   {
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
